@@ -1,3 +1,9 @@
+2007-01-19  Martin Leidig  <mleidig@schlund.de>
+
+	* src/de/schlund/pfixcore/webservice/jsonws/BeanDescriptor.java: removed
+	checking of getter return type against setter argument type, allow type
+	discrepancy
+
 2007-01-19  Jens Lautenbacher  <jtl@schlund.de>
 
 	* projects/core/build/create_depend.xsl: Allow for more than one
@@ -24,7 +30,6 @@
 	Added support for includes in configuration for the direct output server.
 	Deprecated depend and editmode configuration options for direct output server
 	because the were not used.
-
 2007-01-18  Martin Leidig  <mleidig@schlund.de>
 
 	Added classhinting support to the JSON protocol. Classhinting can 
